@@ -1,2 +1,3 @@
 * Bazaar (v1) SCM Module: Edd Dumbill <edd@usefulinc.com>
 * Perforce SCM Module: Richard McMahon <richie.mcmahon@gmail.com>
+* Bazaar-NG SCM Module: Damien Merenne <dam@capsule.org>
